--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -1,5 +1,17 @@
 = jQuery dyndatetime widget Documentation =
 
+== Setup ==
+Like any jQuery plugin, you will  need to include the main jQuery script and the plugin script.  In addition, you will also need a language script (/lang/*) and a calendar CSS file (/css/*).  
+
+{{{<script type="text/javascript" src="dont/forget/to/have/jquery-xxx.js"></script>
+
+<!-- plugin code -->
+<script type="text/javascript" src="src/jquery.dynDateTime.js"></script>
+<!-- Language specific file for calendar -->
+<script type="text/javascript" src="lang/calendar-en.js"></script>
+
+<!-- include one of the CSS styles, or make your own -->
+<link rel="stylesheet" type="text/css" media="all" href="css/calendar-win2k-cold-1.css"/>}}}
 
 
 
