--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -4,10 +4,12 @@
 Like any jQuery plugin, you will  need to include the main jQuery script and the plugin script.  In addition, you will also need a language script from /lang/  and a calendar CSS file from /css/ .  
 
 {{{
+<!-- main jQuery code -->
 <script type="text/javascript" src="dont/forget/to/have/jquery-xxx.js"></script>
 
 <!-- plugin code -->
 <script type="text/javascript" src="src/jquery.dynDateTime.js"></script>
+
 <!-- Language specific file for calendar -->
 <script type="text/javascript" src="lang/calendar-en.js"></script>
 
